fluxcd/apps/hetzner/piped/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: piped
spec: {}
status: {}
