fluxcd/apps/hetzner/piped/piped.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: piped
  name: piped
  namespace: piped
spec:
  replicas: 1
  selector:
    matchLabels:
      app: piped
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: piped
    spec:
      containers:
      - image: 1337kavin/piped:latest
        name: piped
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /app/config.properties
          readOnly: true
          subPath: config.properties
      volumes:
      - name: config
        secret:
          secretName: piped-config-properties
          optional: false
