fluxcd/apps/hetzner/piped/pipedfrontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pipedfrontend
  name: pipedfrontend
  namespace: piped
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipedfrontend
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pipedfrontend
    spec:
      containers:
      - image: 1337kavin/piped-frontend:latest
        name: piped-frontend
        ports:
        - containerPort: 80
        command:
        - ash
        - "-c"
        - 'sed -i s/pipedapi.kavin.rocks/pipedapi.${DOMAIN}/g /usr/share/nginx/html/assets/* && /docker-entrypoint.sh && nginx -g "daemon off;"'
