fluxcd/apps/hetzner/piped/nginx-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: piped
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
