fluxcd/apps/hetzner/piped/piped-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: piped
  namespace: piped
spec:
  selector:
    app: piped
  ports:
  - port: 8080
    targetPort: 8080
