fluxcd/apps/hetzner/piped/pipedfrontend-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pipedfrontend
  namespace: piped
spec:
  selector:
    app: pipedfrontend
  ports:
  - port: 80
    targetPort: 80
