fluxcd/apps/hetzner/piped/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    name: piped
  annotations:
    homelab/public: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: piped.${DOMAIN}, pipedapi.${DOMAIN}, pipedproxy.${DOMAIN}
    external-dns.alpha.kubernetes.io/target: hetzner.${DOMAIN}
  name: piped
  namespace: piped
spec:
  rules:
  - host: piped.${DOMAIN}
    http: &http_rules
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port:
              number: 80
  - host: pipedapi.${DOMAIN}
    http: *http_rules
  - host: pipedproxy.${DOMAIN}
    http: *http_rules
  tls:
  - hosts:
    - piped.${DOMAIN}
    - pipedapi.${DOMAIN}
    - pipedproxy.${DOMAIN}
    secretName: piped-cert
